// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Flex /> components composition should render a child by applying flex and space properties 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 fRwLwk Spaceweb__Space-sc-1abqisc-0 bnvEug"
  >
    <span
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs"
    >
      Flex Item #1
    </span>
    <span
      class="Viewweb__View-sc-1o0hmxm-0 eayzPs"
    >
      Flex Item #2
    </span>
  </div>
</div>
`;

exports[`<Flex /> flex should render a an inline styled child with flex property 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Spaceweb__Space-sc-1abqisc-0 bnvEug Flexweb__Flex-sc-1yhcoea-0 fCJFon"
    style="background-color: red; height: 100px;"
  >
    <div
      class="Textweb__Text-sc-1qrdpx3-0 dcXoif"
      color="shade.980"
      data-testid="ds-text"
    >
      Flex Item #1
    </div>
    <div
      class="Textweb__Text-sc-1qrdpx3-0 dcXoif"
      color="shade.980"
      data-testid="ds-text"
    >
      Flex Item #2
    </div>
  </div>
</div>
`;

exports[`<Flex /> flexDirection should render a child with flexDirection row 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 fRwLwk"
  >
    <div
      class="Textweb__Text-sc-1qrdpx3-0 dcXoif Spaceweb__Space-sc-1abqisc-0 bnvEug"
      color="shade.980"
      data-testid="ds-text"
    >
      Flex Item #1
    </div>
    <div
      class="Textweb__Text-sc-1qrdpx3-0 dcXoif Spaceweb__Space-sc-1abqisc-0 bnvEug"
      color="shade.980"
      data-testid="ds-text"
    >
      Flex Item #2
    </div>
  </div>
</div>
`;
